--- a/lab2/deploy.yaml
+++ b/lab2/deploy.yaml
@@ -19,4 +19,10 @@ spec:
       containers:
       - image: nginx:1.10.0
         name: nginx
-        resources: {}
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
